[gd_scene load_steps=38 format=3 uid="uid://cw8cw6fpq5n63"]

[ext_resource type="Script" uid="uid://c306bigp8honi" path="res://src/scenes/player/player.gd" id="1_uug8f"]
[ext_resource type="Script" uid="uid://chhu1axyjbnac" path="res://src/scenes/player/observer.gd" id="2_4r4qr"]
[ext_resource type="Texture2D" uid="uid://baxhjmno0fwf4" path="res://assets/sprites/player/DragonSprites.png" id="2_6uujk"]
[ext_resource type="Script" uid="uid://td15gffk6sym" path="res://src/scripts/components/states/state_machine.gd" id="3_7p4af"]
[ext_resource type="Texture2D" uid="uid://dqb15x3l5qeot" path="res://assets/sprites/player/AfterImage.png" id="3_tj7fb"]
[ext_resource type="Script" uid="uid://dx2ry6r7fymd8" path="res://src/scenes/player/states/idle_state.gd" id="4_3m013"]
[ext_resource type="Script" uid="uid://c7tiqqjpghksw" path="res://src/scenes/player/gapling_hook.gd" id="4_8vrmn"]
[ext_resource type="Texture2D" uid="uid://bcfjeeqq7rmrh" path="res://icon.svg" id="5_b7xrc"]
[ext_resource type="Script" uid="uid://smgwcfp3t3mr" path="res://src/scenes/player/states/move_state.gd" id="5_ii60e"]
[ext_resource type="Script" uid="uid://dcy2d5ldqq0er" path="res://src/scenes/player/states/fall_state.gd" id="6_8m0h4"]
[ext_resource type="AudioStream" uid="uid://35l4xnse0nlc" path="res://assets/sfx/SoundBonus.wav" id="6_xgv0w"]
[ext_resource type="Script" uid="uid://dqe7wjlt23sn6" path="res://src/scenes/player/states/jump_state.gd" id="7_q88xr"]
[ext_resource type="Script" uid="uid://d6ndn4vpff7p" path="res://src/scenes/player/states/walled_state.gd" id="8_6uujk"]
[ext_resource type="Script" uid="uid://behnqth2nvqyu" path="res://src/scenes/player/state_label.gd" id="8_yu3wn"]
[ext_resource type="Script" uid="uid://boph7py3wtet5" path="res://src/scenes/player/states/stomp_state.gd" id="9_i6xdb"]
[ext_resource type="Script" uid="uid://cy8rgltfy0nub" path="res://src/scenes/player/states/double_jump_state.gd" id="10_62cf5"]
[ext_resource type="Script" uid="uid://n0he4r7dkudr" path="res://src/scenes/player/states/dash_state.gd" id="12_3hyjg"]
[ext_resource type="Script" uid="uid://bkoh6pdkvl2wc" path="res://src/scenes/player/states/swing_state.gd" id="13_824xm"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i6xdb"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_tj7fb"]
_data = [Vector2(0, 0.49568963), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_62cf5"]
curve = SubResource("Curve_tj7fb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_62cf5"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
alpha_curve = SubResource("CurveTexture_62cf5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uug8f"]
size = Vector2(11, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6uujk"]
size = Vector2(11, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6xdb"]
size = Vector2(13, 15)

[sub_resource type="Animation" id="Animation_wnjjo"]
resource_name = "Dash"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.5, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qtero"]
resource_name = "DoubleJump"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_62cf5"]
resource_name = "Fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4.5, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6uujk"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3hyjg"]
resource_name = "Jump"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tj7fb"]
resource_name = "Move"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-2, -11), Vector2(-2, -10), Vector2(-2, -11), Vector2(-2, -10), Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i6xdb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8vrmn"]
resource_name = "Run"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(3, -9), Vector2(3, -10), Vector2(3, -9.5), Vector2(3, -10.945), Vector2(3, -10.945), Vector2(3, -9.5), Vector2(3, -10.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_74f0t"]
resource_name = "Spawn"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-3, -11), Vector2(-2, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b7xrc"]
resource_name = "Stomp"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_824xm"]
resource_name = "Walled"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flippable/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flippable/HatContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4.5, -11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flippable/HatContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6xdb"]
_data = {
&"Dash": SubResource("Animation_wnjjo"),
&"DoubleJump": SubResource("Animation_qtero"),
&"Fall": SubResource("Animation_62cf5"),
&"Idle": SubResource("Animation_6uujk"),
&"Jump": SubResource("Animation_3hyjg"),
&"Move": SubResource("Animation_tj7fb"),
&"RESET": SubResource("Animation_i6xdb"),
&"Run": SubResource("Animation_8vrmn"),
&"Spawn": SubResource("Animation_74f0t"),
&"Stomp": SubResource("Animation_b7xrc"),
&"Walled": SubResource("Animation_824xm")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 33
script = ExtResource("1_uug8f")

[node name="Observer" type="Node" parent="."]
script = ExtResource("2_4r4qr")

[node name="Flippable" type="Node2D" parent="."]
texture_filter = 1

[node name="Sprite" type="Sprite2D" parent="Flippable"]
texture_filter = 1
position = Vector2(0, -1)
texture = ExtResource("2_6uujk")
offset = Vector2(-1, 0)
hframes = 27

[node name="HatContainer" type="Node2D" parent="Flippable"]
position = Vector2(-2, -11)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Flippable"]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_i6xdb")
position = Vector2(-3, -1)
texture = ExtResource("3_tj7fb")
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_62cf5")

[node name="GaplingHook" type="Node2D" parent="Flippable"]
show_behind_parent = true
script = ExtResource("4_8vrmn")
rest_length = 0.1
stiffness = 40.0

[node name="GrapplingPoints" type="Node2D" parent="Flippable/GaplingHook"]

[node name="RayCast2D" type="RayCast2D" parent="Flippable/GaplingHook/GrapplingPoints"]
rotation = -2.268928
target_position = Vector2(0, 150)
collision_mask = 33

[node name="GrappleIndicator" type="Sprite2D" parent="Flippable/GaplingHook"]
position = Vector2(68, -68)
scale = Vector2(0.0546875, 0.0546875)
texture = ExtResource("5_b7xrc")

[node name="Line2D" type="Line2D" parent="Flippable/GaplingHook"]
show_behind_parent = true
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="PowerupSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xgv0w")
volume_db = -20.0
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_uug8f")

[node name="InteractBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_6uujk")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_i6xdb")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="ControllerContainer" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_7p4af")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_3m013")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_ii60e")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("6_8m0h4")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("7_q88xr")

[node name="Timer" type="Timer" parent="StateMachine/Jump"]
one_shot = true

[node name="Walled" type="Node" parent="StateMachine"]
script = ExtResource("8_6uujk")

[node name="DoubleJump" type="Node" parent="StateMachine"]
script = ExtResource("10_62cf5")

[node name="Timer" type="Timer" parent="StateMachine/DoubleJump"]
one_shot = true

[node name="Stomp" type="Node" parent="StateMachine"]
script = ExtResource("9_i6xdb")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("12_3hyjg")

[node name="Timer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.25
one_shot = true

[node name="Grapple" type="Node" parent="StateMachine"]
script = ExtResource("13_824xm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i6xdb")
}

[node name="StateLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 8
text = "State"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_yu3wn")

[connection signal="has_resetted" from="." to="Observer" method="_on_player_has_resetted"]
[connection signal="should_release" from="Flippable/GaplingHook" to="StateMachine/Grapple" method="_on_gapling_hook_should_release"]
[connection signal="area_entered" from="InteractBox" to="." method="_on_interact_box_area_entered"]
[connection signal="area_entered" from="InteractBox" to="StateMachine/Stomp" method="_on_interact_box_area_entered"]
[connection signal="area_exited" from="InteractBox" to="." method="_on_interact_box_area_exited"]
[connection signal="body_entered" from="InteractBox" to="." method="_on_interact_box_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="transitioned" from="StateMachine" to="StateLabel" method="_on_state_machine_transitioned"]
